<resources>
    <string name="app_name">car</string>
    <string name="oil">Oil</string>
    <string name="filter">Filters</string>
    <string name="parts">Auto parts</string>
    <string name="add">Add</string>\
    <string name="save">Save</string>
    <string name="add_category">Add category</string>
    <string name="addByQr">Add by QR</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="minPrice">Min price</string>
    <string name="maxPrice">Max price</string>
    <string name="buy_price">Buy price</string>
    <string name="sell_price">Sell price</string>
    <string name="write_category">Category</string>
    <string name="no_item">Empty</string>
    <string name="search">Search</string>
    <string name="type">Choose a type</string>
    <string name="left">Remaining`</string>
    <string name="price">Price`</string>
    <string name="piece">pieces</string>
    <string name="liters">liters</string>
    <string name="all_required">All fields are required</string>
    <string name="buy">Buy</string>



</resources>